# TTS-For-Books

./: .gitignore  README.md  pyproject.toml
scripts/: chapter_to_wav.py  smoke_test.py
src/abtts/: __main__.py  app.py  cli.py  job_worker.py  section_parser.py
src/abtts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/abtts/tts/: kokoro_engine.py
