[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abtts"
version = "0.1.0"
description = "Audiobook TTS desktop app using Kokoro"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "numpy>=1.26",
  "kokoro",
  "soundfile",
]

[project.scripts]
abtts = "abtts.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
